--- a/all/themes/pixelgarage/less/pxlComponents/view-banners.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-banners.less
@@ -14,7 +14,9 @@
 // Main settings
 // -------------------------
 .view-banners {
-  padding-bottom: 90px;
+  body.front & {
+    padding-bottom: 100px;
+  }
 
   .view-content {
     .carousel {
