--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -317,27 +317,16 @@
                     line-height: 25px;
                   }
 
-                  &.views-field-field-location {
-                    text-align: center;
-                  }
-
                   &.views-field-body {
+                    width: 30%;
                     min-width: 130px;
                     p {
                       font-size: @table-font-size;
                     }
                   }
 
-                  &.views-field-field-brand {
-                    text-align: center;
-
-                    img {
-                      height: 30px;
-                    }
-                  }
-
                   &.views-field-nothing {
-                    text-align: right;
+                    text-align: left;
 
                     a {
                       #pxl-mixins.button-normal;
