--- a/all/modules/_pixelstructure/pixel_structure/pages/course_reservation.page
+++ b/all/modules/_pixelstructure/pixel_structure/pages/course_reservation.page
@@ -137,7 +137,7 @@ $pane->configuration = array(
 
 <p><strong class="segment_%segment:tid">%segment:name:</strong> %course:title</p>
 
-<p>%node:body</p>
+<p>%node:field_study_variant</p>
 
 <p>%node:field_course_date <strong>in</strong> %location:title</p>
 ',
