--- a/all/themes/pixelgarage/less/pxlComponents/panel-structure.less
+++ b/all/themes/pixelgarage/less/pxlComponents/panel-structure.less
@@ -19,6 +19,10 @@
     }
 
     .panel-pane {
+      iframe {
+        max-width: 100%;
+      }
+
       &.pane-custom {
         .panel-content {
           #pxl-mixins.wysiwyg-body;
