--- a/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
@@ -22,7 +22,7 @@
     .views-row {
       display: inline-block;
       margin: 0 -2px;
-      padding: 0;
+      padding: 0 0 15px;
       width: 100%;
       vertical-align: top;
 
